syntax = "proto2";
package chat;

import "api.proto";
option go_package = "social/chat";

message Message {
  required int64 id = 1; // 消息id
  required int64 to_user_id = 2; // 该消息接收者的id
  required int64 from_user_id =3; // 该消息发送者的id
  required string content = 4; // 消息内容
  optional string create_time = 5; // 消息创建时间
}

message douyin_message_chat_request {
  required int64 user_id = 1; // 用户鉴权token
  required int64 to_user_id = 2; // 对方用户id
  required int64 pre_msg_time=3;//上次最新消息的时间（新增字段-apk更新中）
}

message douyin_message_chat_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Message message_list = 3; // 消息列表
}

message douyin_message_action_request {
  required int64 user_id = 1; // 用户鉴权token
  required int64 to_user_id = 2; // 对方用户id
  required int32 action_type = 3; // 1-发送消息
  required string content = 4; // 消息内容
}

message douyin_message_action_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

service DouyinChatService {
  // 获取聊天消息
  rpc GetChatMessage(douyin_message_chat_request) returns (douyin_message_chat_response) {
    option (api.get) = "/douyin/message/chat/";
  }
  rpc PostMessage(douyin_message_action_request) returns (douyin_message_action_response) {
    option (api.post) = "/douyin/message/action/";
  }
}
